[tool.poetry]
name = "elo-tests"
version = "0.1.0"
description = ""
authors = ["AJ laptop <talkingtoaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bayesian-optimization = "^2.0.0"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
